--- a/DiplomApp/DiplomApp/Views/Account/LogOn.cshtml
+++ b/DiplomApp/DiplomApp/Views/Account/LogOn.cshtml
@@ -1,35 +1,43 @@
-﻿@{
+﻿@model DiplomApp.Models.LogOnModel
+@{
     ViewBag.Title = "LogOn";
 }
 
 <h1>LogOn</h1>
 
-<br />
-<br />
-<table>
-    <tr>
-        <td>
-            <label for="login">Login</label>
-        </td>
-        <td>
-            @Html.Editor("login")
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <label for="pass">Password</label>
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-        </td>
-        <td>
-            @Html.Password("password")
-        </td>
-    </tr>
-    <tr>
-        <td colspan="2">@Html.ActionLink("LogOn","Account","DoLog")</td>
-    </tr>
-
-
-
-
-
-</table>
+@using (Html.BeginForm())
+{
+    <div>
+        <fieldset>
+            <legend>Account Information</legend>
+            <table>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Login)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Password)
+                        @Html.ValidationMessageFor(m => m.Login)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Password)
+                    </td>
+                    <td>
+                        @Html.PasswordFor(m => m.Password)
+                        @Html.ValidationMessageFor(m => m.Password)
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="right">
+                        <input type="submit" value="LogOn"/>
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+    </div>
+}
