--- a/DiplomApp/DiplomApp/Views/Account/Registration.cshtml
+++ b/DiplomApp/DiplomApp/Views/Account/Registration.cshtml
@@ -1,7 +1,108 @@
-﻿@{
+﻿@model DiplomApp.Models.RegisterModel
+@{
     ViewBag.Title = "Registration";
 }
 
 <h1>Registration</h1>
 
+<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
+
+@using (Html.BeginForm())
+{
+    @Html.ValidationSummary(true, "Account creation was unsuccessful. Please correct the errors and try again.")
+    <div>
+        <fieldset>
+            <legend>Account Information</legend>
+            <table>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Login)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Login)
+                        @Html.ValidationMessageFor(m => m.Login)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Password)
+                    </td>
+                    <td>
+                        @Html.PasswordFor(m => m.Password)
+                        @Html.ValidationMessageFor(m => m.Password)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.ConfirmPassword)
+                    </td>
+                    <td>
+                        @Html.PasswordFor(m => m.ConfirmPassword)
+                        @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Email)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Email)
+                        @Html.ValidationMessageFor(m => m.Email)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.FirstName)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.FirstName)
+                        @Html.ValidationMessageFor(m => m.FirstName)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.LastName)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.LastName)
+                        @Html.ValidationMessageFor(m => m.LastName)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Mobile)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Mobile)
+                        @Html.ValidationMessageFor(m => m.Mobile)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Address)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Address)
+                        @Html.ValidationMessageFor(m => m.Address)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        @Html.LabelFor(m => m.Birthday)
+                    </td>
+                    <td>
+                        @Html.TextBoxFor(m => m.Birthday)
+                        @Html.ValidationMessageFor(m => m.Birthday)
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="right">
+                        <input type="submit" value="Register" />
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+    </div>
+}
