Work with LogOn

--- a/DiplomApp/DiplomApp/Views/Account/LogOn.cshtml
+++ b/DiplomApp/DiplomApp/Views/Account/LogOn.cshtml
@@ -19,7 +19,7 @@
                         @Html.LabelFor(m => m.Login)
                     </td>
                     <td>
-                        @Html.TextBoxFor(m => m.Password)
+                        @Html.TextBoxFor(m => m.Login)
                         @Html.ValidationMessageFor(m => m.Login)
                     </td>
                 </tr>
