--- a/DiplomApp/DiplomApp/Views/Home/Index.cshtml
+++ b/DiplomApp/DiplomApp/Views/Home/Index.cshtml
@@ -4,3 +4,12 @@
 
 
 <h1><strong>Welcome</strong></h1>
+
+
+@if(Request.IsAuthenticated) {
+    <text>Welcome <strong>@User.Identity.Name</strong>!
+    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
+}
+else {
+    @:[ @Html.ActionLink("Log On", "LogOn", "Account") ]
+}
