--- a/DiplomApp/DiplomApp.Repo/DBEntities.Context.tt
+++ b/DiplomApp/DiplomApp.Repo/DBEntities.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"DBModel.edmx";
+const string inputFile = @"DBEntities.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
