--- a/DiplomApp/DiplomApp/Views/Account/Registration.cshtml
+++ b/DiplomApp/DiplomApp/Views/Account/Registration.cshtml
@@ -93,8 +93,9 @@
                         @Html.LabelFor(m => m.Birthday)
                     </td>
                     <td>
-                        @Html.TextBoxFor(m => m.Birthday)
-                        @Html.ValidationMessageFor(m => m.Birthday)
+                       @* @Html.TextBoxFor(m => m.Birthday)
+                        @Html.ValidationMessageFor(m => m.Birthday)*@
+                        <input type="date" name="Birthday"/>
                     </td>
                 </tr>
                 <tr>
