--- a/DiplomApp/DiplomApp/Views/Home/History.cshtml
+++ b/DiplomApp/DiplomApp/Views/Home/History.cshtml
@@ -11,6 +11,7 @@
         <th>X</th>
         <th>Y</th>
         <th>Z</th>
+        <th>Date</th>
     </tr>
     @{
         foreach (var point in Model)
@@ -19,6 +20,7 @@
                 <td>@point.X</td>
                 <td>@point.Y</td>
                 <td>@point.Z</td>
+                <td>@point.Date</td>
             </tr>
         }
     }
