Add Dark/Light theme, fix ninder helper

--- a/DiplomApp/DiplomApp/Views/Shared/_Layout.cshtml
+++ b/DiplomApp/DiplomApp/Views/Shared/_Layout.cshtml
@@ -3,45 +3,99 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    @*<link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />*@
-    <link href="@Url.Content("~/Content/Light.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-2.5.3.js")" type="text/javascript"></script>
+    <script>
+        function getCookie(name) {
+            var matches = document.cookie.match(new RegExp(
+                "(?:^|; )" + name.replace(/([\.$?*|{}\(\)\[\]\\\/\+^])/g, '\\$1') + "=([^;]*)"));
+            return matches ? decodeURIComponent(matches[1]) : undefined;
+        }
+
+        // уcтанавливает cookie
+        function setCookie(name, value, props) {
+            props = props || {};
+            var exp = props.expires;
+            if (typeof exp == "number" && exp) {
+                var d = new Date();
+                d.setTime(d.getTime() + exp * 1000);
+                exp = props.expires = d;
+            }
+            if (exp && exp.toUTCString) {
+                props.expires = exp.toUTCString();
+            }
+
+            value = encodeURIComponent(value);
+            var updatedCookie = name + "=" + value;
+            for (var propName in props) {
+                updatedCookie += "; " + propName;
+                var propValue = props[propName];
+                if (propValue !== true) {
+                    updatedCookie += "=" + propValue;
+                }
+            }
+            document.cookie = updatedCookie;
+
+        }
+
+        // удаляет cookie
+        function deleteCookie(name) {
+            setCookie(name, null, { expires: -1 });
+        }
+
+
+
+
+        //ставим выбранный вариант, заносим в coockie
+        function setCss(css) {
+            alert("Set cookie" + css);
+            setCookie('css', css, { expires: 1e9 });
+            document.getElementsByTagName('link')[0].href = css;
+        }
+
+        var link = document.createElement('link');
+        link.setAttribute('type', 'text/css');
+        link.setAttribute('rel', 'stylesheet');
+        link.setAttribute('href', getCookie('css') || 'Site.css');
+        document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
 </head>
-<body>
-    <header>
-        <div id="logo"><a href="#">Remote monitoring</a></div>
-        <div id="Registration">@Html.Partial("_LogOnPartial") </div>
-        <nav>
-            <ul>
-                @Html.ActionLink("home", "Index", "Home")
-                @Html.ActionLink("phone position", "Position", "Home")
-                @Html.ActionLink("chart", "Chart", "Home")
-                @Html.ActionLink("history", "History", "Home")
-                @Html.ActionLink("about", "About", "Home")
-            </ul>
-        </nav>
-    </header>
-    <section id="main">
-        <div id="content">
-            <div id="sidebar">
-                <div id="sidebar_top"></div>
-                <div id="sidebar_text">
-                    <h2>Free place</h2>
-                    <p><strong>Your</strong> AD here.</p>
+    <body>
+        <header>
+            <div id="logo"><a href="#">Remote monitoring</a></div>
+            <div id="Registration">@Html.Partial("_LogOnPartial") </div>
+            <nav>
+                <ul>
+                    @Html.ActionLink("home", "Index", "Home")
+                    @Html.ActionLink("phone position", "Position", "Home")
+                    @Html.ActionLink("chart", "Chart", "Home")
+                    @Html.ActionLink("history", "History", "Home")
+                    @Html.ActionLink("about", "About", "Home")
+                </ul>
+            </nav>
+        </header>
+        <section id="main">
+            <div id="content">
+                <div id="sidebar">
+                    <div id="sidebar_top"></div>
+                    <div id="sidebar_text">
+                        <h2>Free place</h2>
+                        <p><strong>Your</strong> AD here.</p>
+                    </div>
+                    <div id="sidebar_bottom"></div>
                 </div>
-                <div id="sidebar_bottom"></div>
+                <div id="text">
+                    <input type="button" onclick='setCss("@Url.Content("~/Content/Site.css")")' name="Change" value="ChangeD"/>
+                    <input type="button" onclick='setCss("@Url.Content("~/Content/Light.css")")' name="Change2" value="ChangeL"/>
+                    @RenderBody()
+                </div>
             </div>
-            <div id="text">
-                @RenderBody()
-            </div>
-        </div>
-        <footer>
-            <div id="left_footer">&copy; Copyright 2012<strong> Xpss </strong>design </div>
-            <div id="right_footer">
-                Design by <a href="https://www.facebook.com/aleh.khvoshch" title="Xpss">Aleh Khvoshch</a>
-            </div>
-        </footer>
-    </section>
-</body>
+            <footer>
+                <div id="left_footer">&copy; Copyright 2012<strong> Xpss </strong>design </div>
+                <div id="right_footer">
+                    Design by <a href="https://www.facebook.com/aleh.khvoshch" title="Xpss">Aleh Khvoshch</a>
+                </div>
+            </footer>
+        </section>
+    </body>
 </html>
