--- a/DiplomApp/DiplomApp/Content/Site.css
+++ b/DiplomApp/DiplomApp/Content/Site.css
@@ -84,6 +84,13 @@ a {
         text-decoration: none;
     }
 
+#themeToggle {
+    height: 65px;
+    width: 45px;
+    background-image:url('images/off.jpg');
+    margin: 0 auto;
+}
+
 #logo {
     padding: 30px 0 90px 0;
     color: #fff;
@@ -161,7 +168,7 @@ nav {
     }
 
     #text li {
-        background: url(images/li.gif) no-repeat 0px 7px;
+        /*background: url(images/li.gif) no-repeat 0px 7px;*/
     }
 
 #sidebar {
