Fix bug with cookies

--- a/DiplomApp/DiplomApp/Views/Shared/_Layout.cshtml
+++ b/DiplomApp/DiplomApp/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                 updatedCookie += "; " + propName;
                 var propValue = props[propName];
                 if (propValue !== true) {
-                    updatedCookie += "=" + propValue;
+                    updatedCookie += "=" + propValue + ";path=/";
                 }
             }
             document.cookie = updatedCookie;
