--- a/DiplomApp/DiplomApp/Content/Light.css
+++ b/DiplomApp/DiplomApp/Content/Light.css
@@ -192,7 +192,7 @@ nav {
 #sidebar h2 {
     font-size: 13px;
     text-transform: uppercase;
-    color: #fff;
+    color: #000;
     margin: 20px 0 0 0;
     padding: 0;
     background: none;
